Adding another reference to Rt page

--- a/index.html
+++ b/index.html
@@ -769,9 +769,13 @@
 			<li>Estimating COVID-19's $R_t$ in Real-Time with PYMC3<br>
 			Kevin Systrom<br>
 			<a target="_blank" href="https://github.com/k-sys/covid-19/blob/master/Realtime%20Rt%20mcmc.ipynb">https://github.com/k-sys/covid-19/blob/master/Realtime%20Rt%20mcmc.ipynb</a></li>
-			<li>The Effective Reproduction Number as a Prelude to Statistical Estimation of Time-Dependent Epidemic Trends, <br>
+			<li>The Effective Reproduction Number as a Prelude to Statistical Estimation of Time-Dependent Epidemic Trends<br>
 			Hiroshi Nishiura and Gerardo Chowell<br>
 			<a target="_blank" href="https://link.springer.com/content/pdf/10.1007/978-90-481-2313-1_5.pdf">https://link.springer.com/content/pdf/10.1007/978-90-481-2313-1_5.pdf</a></li>
+			<li>Real-time estimation of the effective reproduction number of COVID-19 in Japan<br>
+			Sung-mok Jung, Andrei R. Akhmetzhanov, Kenji Mizumoto, and Hiroshi Nishiura<br>
+			<a target="_blank" href="https://github.com/contactmodel/COVID19-Japan-Reff">https://github.com/contactmodel/COVID19-Japan-Reff</a></li>
+
 		</ul>
 	</div>
 </div>
