Changing from "Newly infected cases" to "Newly infected estimate" in Rt chart.

--- a/index_rt.html
+++ b/index_rt.html
@@ -131,7 +131,7 @@
 					data.setColumnProperty(3, 'role', 'interval');
 					data.setColumnProperty(4, 'role', 'interval');
 					data.setColumnProperty(5, 'role', 'interval');
-					data.setColumnLabel(6, 'Newly infected cases');
+					data.setColumnLabel(6, 'Newly infected estimate');
 					data.setColumnLabel(8, 'Newly confirmed cases');
 					var options =
 					{
