Increasing plot range o fcases in Rt plot for recent surges.

--- a/index_rt.html
+++ b/index_rt.html
@@ -167,9 +167,10 @@
 							}
 							},
 							1: {
+							gridlines: { interval: [1, 2]},
 							minorGridlines: { count:0 },
 							viewWindow: {
-								max: 800,
+								max: 2000,
 								min: 0,
 							},
 							format: '##.#'
