Reverting tick of cases in Rt plot

--- a/index_rt.html
+++ b/index_rt.html
@@ -167,7 +167,7 @@
 							}
 							},
 							1: {
-							gridlines: { interval: [1, 2]},
+							gridlines: { interval: [1, 2, 2.5, 5]},
 							minorGridlines: { count:0 },
 							viewWindow: {
 								max: 2000,
