--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		var logScale = true;
 		var logScaleChange = true;
 		var MCO = new Date(2020, 3-1, 18);
+		var MCO2 = new Date(2021, 1-1, 13);
 		google.charts.load('current', {'packages':['corechart', 'line']});
 		google.charts.setOnLoadCallback(drawChartFirst);
 		
@@ -107,6 +108,7 @@
 				formatter.format(data, 0);
 				chart.draw(data, options);
 				drawAxisLine(chart, MCO, 'MCO');
+				drawAxisLine(chart, MCO2, 'MCO2.0', -85);
 				
 				if(logScale) {
 					var tDouble = Math.log(axisMax/axisMin)/Math.log(2.0);
@@ -116,7 +118,7 @@
 						var textDate = new Date(arrayData[1][0]);
 						textDate.setDate(textDate.getDate() + tDouble*d - 4*d);
 						drawLine(chart, arrayData[1][0], axisMin, anchorDate, axisMax);
-						drawText(chart, textDate, axisMax/2.0/(1.0^d), 'Double every ' + d.toString() + ' days', 8, 0, '#F08080');
+						drawText(chart, textDate, axisMax/(3.0*(1.0^d)), 'Double every ' + d.toString() + ' days', 8, 0, '#F08080');
 					}
 				}
 			});
@@ -179,6 +181,7 @@
 				formatter.format(data, 0);
 				chart.draw(data, options);
 				drawAxisLine(chart, MCO, 'MCO', -70);
+				drawAxisLine(chart, MCO2, 'MCO2.0', -85);
 				
 				if(logScaleChange) {
 					var guideLineStart = Math.max(1, axisMin);
@@ -278,6 +281,7 @@
 				formatter.format(data, 0);
 				chart.draw(data, options);
 				drawAxisLine(chart, MCO, 'MCO');
+				drawAxisLine(chart, MCO2, 'MCO2.0', -85);
 				var tDouble = Math.log(axisMax/axisMin)/Math.log(2.0);
 				if(logScale)
 					for(var d = 2; d <=8; d = d + 3) {
@@ -295,13 +299,16 @@
 			$.get("./data/dailyTotalDynamics.csv", function(csvString) {
 				<!-- nationwide-dynamics -->
 				var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
-				var idxMCO = -1;
 				arrayData[0].splice(2, 0,'');
+				var idxMCO = -1, idxMCO2 = -1;
 				for(var i = 1; i < arrayData.length; ++i) {
 					arrayData[i].splice(2, 0, null);
 					arrayData[i][3] = new Date(arrayData[i][3]);
 					if(arrayData[i][3].getYear() == MCO.getYear() && arrayData[i][3].getMonth() == MCO.getMonth() && arrayData[i][3].getDate() == MCO.getDate()) {
 						idxMCO = i;
+					}
+					if(arrayData[i][3].getYear() == MCO2.getYear() && arrayData[i][3].getMonth() == MCO2.getMonth() && arrayData[i][3].getDate() == MCO2.getDate()) {
+						idxMCO2 = i;
 					}
 				}
 				arrayData.push([arrayData[arrayData.length-1][0], arrayData[arrayData.length-1][1], -1, arrayData[arrayData.length-1][3]]);
@@ -362,6 +369,9 @@
 				if(idxMCO > 0) {
 					drawCircle(chart, arrayData[idxMCO][0], arrayData[idxMCO][1], 5, 'MCO', '#00cccc');
 				}
+				if(idxMCO2 > 0) {
+					drawCircle(chart, arrayData[idxMCO2][0], arrayData[idxMCO2][1], 5, 'MCO2.0', '#00cccc');
+				}
 			});
 		}
 		function drawChartDailyDynamicsByStates() {
@@ -370,8 +380,10 @@
 				var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
 				<!-- idxMCOs = the first and last indices are not used -->
 				var idxMCOs = new Array(arrayData[0].length);
+				var idxMCO2s = new Array(arrayData[0].length);
 				for(var j = 0; j < idxMCOs.length; ++j) {
 					idxMCOs[j] = -1;
+					idxMCO2s[j] = -1;
 				}
 				var dateColumn = 17;
 				var yMax = 0;
@@ -381,6 +393,13 @@
 						for(var j = 1; j < arrayData[0].length - 1; ++j) {
 							if(arrayData[i][j] != null) {
 								idxMCOs[j] = i;
+							}
+						}
+					}
+					if(arrayData[i][dateColumn].getYear() == MCO2.getYear() && arrayData[i][dateColumn].getMonth() == MCO2.getMonth() && arrayData[i][dateColumn].getDate() == MCO2.getDate()) {
+						for(var j = 1; j < arrayData[0].length - 1; ++j) {
+							if(arrayData[i][j] != null) {
+								idxMCO2s[j] = i;
 							}
 						}
 					}
@@ -455,9 +474,12 @@
 					if(idxMCOs[j] > 0) {
 						drawCircle(chart, arrayData[idxMCOs[j]][0], arrayData[idxMCOs[j]][j], 5, '', colors[j-1]);
 					}
+					if(idxMCO2s[j] > 0) {
+						drawCircle(chart, arrayData[idxMCO2s[j]][0], arrayData[idxMCO2s[j]][j], 5, '', colors[j-1]);
+					}
 				}
 				drawText(chart, axisYMax/5, axisYMax/5, 'exponential growth', 18, 45.0, '#F08080');
-				drawText(chart, axisYMax*0.015, axisYMax*0.6, 'Circle = MCO', 18, 0.0, '#00cccc');
+				drawText(chart, axisYMax*0.01, axisYMax*0.6, 'Circle = MCO, MCO2.0', 18, 0.0, '#00cccc');
 			});
 		}
 		function drawLine(chart, x1, y1, x2, y2) {
