--- a/index_rt.html
+++ b/index_rt.html
@@ -10,6 +10,7 @@
 		var logScale = true;
 		var logScaleChange = true;
 		var MCO = new Date(2020, 3-1, 18);
+		var MCO2 = new Date(2021, 1-1, 13);
 		var chartSettings = {};
 			$.ajax({
 				url: './Rt/chartSettings.json',
@@ -255,6 +256,7 @@
  
 					chart.draw(view, options);
 					drawAxisLine(chart, MCO, 'MCO');
+					drawAxisLine(chart, MCO2, 'MCO2.0', -85);
 					<!-- google.visualization.events.addOneTimeListener(chart, 'ready', function() { -->
 						<!-- addChartGradient(chart, arrayData.length-1); -->
 					<!-- }); -->
