Rt chart now has 10,000 cases for maximum axis only in nationwide chart

--- a/index_rt.html
+++ b/index_rt.html
@@ -225,7 +225,7 @@
 							gridlines: { interval: [1, 2, 2.5, 5]},
 							minorGridlines: { count:0 },
 							viewWindow: {
-								max: 5000,
+								max: (areaName == "Malaysia" ? 10000 : 5000),
 								min: 0,
 							},
 							format: '##.#'
