--- a/index_rt.html
+++ b/index_rt.html
@@ -11,6 +11,7 @@
 		var logScaleChange = true;
 		var MCO = new Date(2020, 3-1, 18);
 		var MCO2 = new Date(2021, 1-1, 13);
+		var MCO3 = new Date(2021, 5-1, 12);
 		var chartSettings = {};
 			$.ajax({
 				url: './Rt/chartSettings.json',
@@ -256,7 +257,8 @@
  
 					chart.draw(view, options);
 					drawAxisLine(chart, MCO, 'MCO');
-					drawAxisLine(chart, MCO2, 'MCO2.0', -85);
+					drawAxisLine(chart, MCO2, 'MCO2.0', -80);
+					drawAxisLine(chart, MCO3, 'MCO3.0', -80);
 					<!-- google.visualization.events.addOneTimeListener(chart, 'ready', function() { -->
 						<!-- addChartGradient(chart, arrayData.length-1); -->
 					<!-- }); -->
